[package]
name = "citrus-cli"
version = "0.1.3"
edition = "2021"
license = "MIT"
license_file = "LICENSE"
description = "A simple task managing tool that can be configured with YAML files"
repository = "https://github.com/davidkurilla/citrus"
readme = "README.md"

[dependencies]
clap = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8.13"
