[package]
name = "citrus-cli"
version = "0.1.9"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "A simple task managing tool that can be configured with YAML files"
repository = "https://github.com/davidkurilla/citrus"
readme = "../../docs/README.md"

[dependencies]
clap = "3"
citrus-core = "0.1.2"
citrus-migrations = "0.1.1"
