[package]
name = "citrus-core"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "A library of simple task managing functions."
repository = "https://github.com/davidkurilla/citrus"
readme = "../../docs/README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8.13"