[package]
name = "citrus-migrations"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "A library of database migration functions for citrus."
repository = "https://github.com/davidkurilla/citrus"
readme = "../../docs/README.md"

[dependencies]
diesel = { version = "2.1.6", features = ["postgres"] }
diesel_migrations = "2.1.0"
toml = "0.5"